RMagick 2.12.0
    o Added Image#auto_level_channel, Image#auto_gamma_channel (available in
      ImageMagick 6.5.5-1)

RMagick 2.11.1
    o Applied Alexey Borzenkov's mingw patches to extconf.rb.
    o Fixed a bug in Magick.trace_proc that could cause a segv at program exit
      with Ruby 1.9.1 (bug report by Larry Young)
    o Added new CompressionType enum values ZipSCompression, PixCompression,
      Pxr24Compression, B44Compression, B44ACompression (available in
      ImageMagick 6.5.5-4)

RMagick 2.11.0
    o Fix bug #26475, dissolve and watermark don't work with new versions of
      ImageMagick (reported by Jim Crate)
    o Add Image#composite_mathematics (available in ImageMagick 6.5.4-3)
    o Add new LinearDodgeCompositeOp, LinearBurnCompositeOp,
      PegtopCompositeOp, PinLightCompositeOp, VividLightCompositeOp enum values
      (available in ImageMagick 6.5.4-3)

RMagick 2.10.0
    o ImageMagick releases earlier than 6.3.5-10 and Ruby releases earlier
      than 1.8.5 no longer supported.
    o (Experimental) Support the use of Ruby managed memory for all memory
      allocations (available in ImageMagick 6.5.3-10)
    o Add Image#selective_blur_channel (available in ImageMagick 6.5.0-3)
    o Add new AlphaBackgroundChannel enum value (available in ImageMagick
      6.5.2-5)
    o Add new DistortCompositeOp enum value (available in ImageMagick 6.5.3-7)

RMagick 2.9.2
    o Add new HorizontalTileEdgeVirtualPixelMethod,
      VerticalTileEdgeVirtualPixelMethod, CheckerTileVirtualPixelMethod
      VirtualPixelMethod enum values (available in ImageMagick 6.5.0-1)
    o Added BilinearForwardDistortion, BilinearReverseDistortion enums
      (available in ImageMagick 6.5.1-2)
    o Add missing composite operators to Magick::Draw#composite method
    o Add warning about dropping support for ImageMagick < 6.3.5 and
      Ruby < 1.8.5
    o Fix bug #25892, stack buffer overflow in Magick::TypeMetric.to_s
      (reported by Roman Simecek)

RMagick 2.9.1