@@ -1,6 +1,8 @@
 RMagick 2.12.0
     o Added Image#auto_level_channel, Image#auto_gamma_channel (available in
       ImageMagick 6.5.5-1)
+    o Added Draw#interline_spacing, #interline_spacing= (available in
+      ImageMagick 6.5.5-8)
 
 RMagick 2.11.1
     o Applied Alexey Borzenkov's mingw patches to extconf.rb.
